# backend/src/main/java/com/zl/mjga/dto/knowledge/DocUpdateDto.java
@@ -1,6 +1,5 @@
 package com.zl.mjga.dto.knowledge;
 
-import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
 
-public record DocUpdateDto(@NotNull Long id, @NotEmpty Boolean enable) {}
+public record DocUpdateDto(@NotNull Long id, @NotNull Long libId, @NotNull Boolean enable) {}
